[project]
name = "longest-word"
version = "0.1.0"
description = ""
authors = [
    {name = "Rey Aguilar",email = "rey.raguilar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "flask (>=3.1.2,<4.0.0)",
]

[tool.poetry]
packages = [{include = "longest_word", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pylint (>=4.0.3,<5.0.0)"
]
